  arbitrary shell code can't be executed because a bogus URL was
  passed in.

- gettext.translation has an optional fallback argument, and
  gettext.find an optional all argument. Translations will now fallback
  on a per-message basis.

- distutils bdist commands now offer a --skip-build option.

- warnings.warn now accepts a Warning instance as first argument.

Tools/Demos

Build

C API

- Objects allocated using the new PyMalloc_New and PyMalloc_NewVar
  functions will be allocated using pymalloc if it is enabled.  These
  objects should be deallocated using PyMalloc_Del.  The PyObject_{New,
  NewVar,NEW_VAR,Del,DEL} APIs have been changed to always use
  PyMem_MALLOC and PyMem_FREE, even if pymalloc is enabled.  The
  PyCore_* family of APIs have been removed.

- The "u#" parser marker will now pass through Unicode object as-is
  without going through the buffer API.

- The enumerators of cmp_op have been renamed to use the prefix PyCmp_.

- An old #define of ANY as void has been removed from pyport.h.  This
  hasn't been used since Python's pre-ANSI days, and the #define has
  been marked as obsolete since then.  SF bug 495548 says it created
  conflicts with other packages, so keeping it around wasn't harmless.

- Because Python's magic number scheme broke on January 1st, we decided
  to stop Python development.  Thanks for all the fish!

- Some of us don't like fish, so we changed Python's magic number
  scheme to a new one. See Python/import.c for details.

New platforms

- GNU/Hurd is now supported.

Tests

Windows

- file.truncate([newsize]) now works on Windows for all newsize values.
  It used to fail if newsize didn't fit in 32 bits, reflecting a
  limitation of MS _chsize (which is no longer used).

- os.waitpid() is now implemented for Windows, and can be used to block
  until a specified process exits.  This is similar to, but not exactly
  the same as, os.waitpid() on POSIX systems.  If you're waiting for